# diploma-backend

./: .env  .gitignore  Dockerfile  dependency.py  main.py  pyproject.toml  requirements.txt
src/: auth.py  database.py  enum.py  models.py  schemas.py  utils.py
src/api/v1/: chats.py  messages.py  users.py
src/repository/: chats.py  messages.py  users.py
